# vibe-check

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GUIDE.md  Makefile  PR_SUMMARY.md  QUICKSTART.md  README.md  benchmark_task.py  demo_git_tracking.py  install.sh  pyproject.toml  pyproject.toml.backup  requirements.txt  reset_sample_project.py  run_smoke_test.py  run_tests.py  setup.md  setup_wizard.py  test_benchmark_task.py  test_complete_function.py  test_end_to_end.py  test_precommit.py  vibe  vibe-wrapper.sh
.github/workflows/: ci.yml
benchmark/: analyze.py  batch_runner.py  batch_runner.py.backup  continue_config_generator.py  continue_session_tracker.py  machine_info.py  metrics.py  model_verifier.py  models_config.yaml  ollama_check.py  results_summary.csv  task_runner.py  validators.py
benchmark/cn_integration/: cn_batch_integration.py  cn_config.py  cn_metrics.py  cn_runner.py
benchmark/tasks/easy/: add_gitignore_entry.md  fix_calculator_typos.md  fix_typo.md
benchmark/tasks/hard/: advanced_todo_app.md  algorithm_optimization.md  debug_race_condition.md  design_pattern_refactor.md  implement_dashboard.md  multi_step_migration.md  optimize_analytics.md  refactor_metrics.md  refactor_user_manager.md
benchmark/tasks/medium/: add_data_processor_validation.md  add_divide_validation.md  add_export_feature.md  add_validation.md  basic_todo_app.md  logic_puzzle_validator.md  recursive_problem_solver.md  state_machine_implementation.md
benchmark/tasks/smoke/: add_comment.md
docs/: MODELS.md  README.md  batch_runner.md  cli-benchmarking.md  cn-integration-quickstart.md  cn-runner.md  continue-config.md  continue-session-tracking.md  continue-setup.md  git-tracking.md  manual-benchmarking-guide.md  manual-guide.md  models.md  ollama.md  pre-commit-setup.md  session-analysis.md  setup.md  storage.md  vibe-cli.md
sample_project/: .gitignore  ISSUES.md  README.md  requirements.txt
sample_project/src/: __init__.py  analytics.py  calculator.py  data_processor.py  user_manager.py
scripts/: README.md  clear_benchmark_results.sh  debug_cn.py  run_all_benchmarks.py  run_cn_demo  run_demo  run_hard  run_smoke_test.py  run_tests.py  test_cn_integration.py  test_todo_challenges.py
tests/: README.md  test_analyze.py  test_batch_runner.py  test_benchmark_task.py  test_cn_batch_integration.py  test_cn_config.py  test_cn_integration_end_to_end.py  test_cn_metrics.py  test_cn_runner.py  test_complete_function.py  test_continue_config_generator.py  test_continue_session_tracker.py  test_continue_session_tracker_fix.py  test_end_to_end.py  test_metrics.py  test_model_verifier.py  test_ollama_check.py  test_precommit.py  test_setup_wizard.py  test_task_runner.py  test_validators.py
